--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  build_runner: 1.6.2
   build_web_compilers: 2.12.0
   flutter_test:
     sdk: flutter
